<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".login.SignupActivity">
<!--call app bar on MainActivity instead using inflater inflater-->

<!--    un-inflated yet place for app_bar on activity -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.appbar.AppBarLayout>

<!--    the big CREATE YOUR USERNAME AND PASSWORD text-->
<!--    TODO: apply the bobbyjones font-->
    <TextView
        android:id="@+id/create_your"
        android:layout_width="361dp"
        android:layout_height="107dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:lineSpacingExtra="-2sp"
        android:text="@string/create_your"
        android:textAppearance="@style/header_text"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="69dp"
        android:fontFamily="@font/bobbyroughsoft"/>

    <TextView
        android:id="@+id/username_text"
        android:layout_width="130dp"
        android:layout_height="27dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="96dp"
        android:gravity="top"
        android:lineSpacingExtra="-2sp"
        android:text="@string/prompt_email"
        android:textAppearance="@style/subheader_text"
        app:layout_constraintBottom_toTopOf="@+id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.784"
        android:fontFamily="@font/bobbyroughsoft"/>

<!--    the editable email field -->
    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="130dp"
        android:layout_height="27dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="96dp"
        android:gravity="top"
        android:lineSpacingExtra="-2sp"
        android:text="@string/password_text"
        android:textAppearance="@style/subheader_text"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.021"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948"
        android:fontFamily="@font/bobbyroughsoft"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/confirm_password_text"
        android:layout_width="253dp"
        android:layout_height="33dp"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:lineSpacingExtra="-2sp"
        android:text="@string/confirm_password_text"
        android:textAppearance="@style/subheader_text"
        app:layout_constraintBottom_toTopOf="@+id/confirm_password"
        tools:layout_editor_absoluteX="6dp"
        android:fontFamily="@font/bobbyroughsoft"/>

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="379dp"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        tools:layout_editor_absoluteX="6dp"
        tools:layout_editor_absoluteY="412dp" />

    <Button
        android:id="@+id/signup"
        android:layout_width="321dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="start"
        android:background="@drawable/button"
        android:text="@string/action_sign_in_short"
        tools:layout_editor_absoluteX="38dp"
        tools:layout_editor_absoluteY="512dp"
        android:fontFamily="@font/bobbyroughsoft"/>




</androidx.constraintlayout.widget.ConstraintLayout>